Update CatTests.java